--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -62,6 +62,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
+    <Button
+        android:id="@+id/buybtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kaufen"
+        android:visibility="gone" />
+
 
     <TextView
         android:id="@+id/response_view"
