--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -14,43 +14,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connect"
-        app:layout_constraintBottom_toTopOf="@+id/hellobtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="16dp"/>
 
     <Button
         android:id="@+id/hellobtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send hello"
-        app:layout_constraintBottom_toTopOf="@+id/jsonbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@id/connectbtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connectbtn" />
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/jsonbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send Json"
-        app:layout_constraintBottom_toTopOf="@+id/response_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@id/hellobtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hellobtn" />
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/dktbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send DKT Message"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/jsonbtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 
     <Button
         android:id="@+id/rollDiceBtn"
@@ -58,26 +51,27 @@
         android:layout_height="wrap_content"
         android:text="Roll Dice"
         app:layout_constraintTop_toBottomOf="@id/dktbtn"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/buybtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Kaufen"
-        android:visibility="gone" />
-
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/rollDiceBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 
     <TextView
         android:id="@+id/response_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="response"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@id/buybtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jsonbtn" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="32dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
