--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -16,7 +16,8 @@
         android:text="Connect"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <Button
         android:id="@+id/hellobtn"
@@ -25,7 +26,8 @@
         android:text="Send hello"
         app:layout_constraintTop_toBottomOf="@id/connectbtn"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="8dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/jsonbtn"
@@ -34,16 +36,18 @@
         android:text="Send Json"
         app:layout_constraintTop_toBottomOf="@id/hellobtn"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="8dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/dktbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send DKT Message"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/jsonbtn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/rollDiceBtn"
@@ -51,8 +55,9 @@
         android:layout_height="wrap_content"
         android:text="Roll Dice"
         app:layout_constraintTop_toBottomOf="@id/dktbtn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"/>
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/buybtn"
@@ -61,8 +66,9 @@
         android:text="Kaufen"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/rollDiceBtn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        android:layout_marginTop="8dp"/>
 
     <TextView
         android:id="@+id/response_view"
@@ -73,5 +79,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginTop="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
