--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -70,6 +70,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"/>
 
+    <Button
+        android:id="@+id/openDiceScreenBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="open dice ui"
+        app:layout_constraintTop_toBottomOf="@id/buybtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
+
     <TextView
         android:id="@+id/response_view"
         android:layout_width="wrap_content"
