--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -10,74 +10,36 @@
     tools:context=".FullscreenFragment">
 
     <Button
-        android:id="@+id/connectbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Connect"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"/>
-
-    <Button
-        android:id="@+id/hellobtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send hello"
-        app:layout_constraintTop_toBottomOf="@id/connectbtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
-
-    <Button
-        android:id="@+id/jsonbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send Json"
-        app:layout_constraintTop_toBottomOf="@id/hellobtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
-
-    <Button
-        android:id="@+id/dktbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send DKT Message"
-        app:layout_constraintTop_toBottomOf="@id/jsonbtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
-
-    <Button
         android:id="@+id/rollDiceBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="41dp"
         android:text="Roll Dice"
-        app:layout_constraintTop_toBottomOf="@id/dktbtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/buybtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="89dp"
         android:text="Kaufen"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/rollDiceBtn"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/response_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="response"
-        app:layout_constraintTop_toBottomOf="@id/buybtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
