--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -9,6 +9,26 @@
     android:theme="@style/ThemeOverlay.MyApplication.FullscreenContainer"
     tools:context=".FullscreenFragment">
 
+    <ScrollView
+        android:id="@+id/ownership_scroll"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="#DDDDDD"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/ownership_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Besitz wird hier angezeigt"
+            android:textColor="#000000"
+            android:textSize="14sp" />
+    </ScrollView>
+
+
     <Button
         android:id="@+id/rollDiceBtn"
         android:layout_width="wrap_content"
