--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -9,21 +9,44 @@
     android:theme="@style/ThemeOverlay.MyApplication.FullscreenContainer"
     tools:context=".FullscreenFragment">
 
+    <!-- Besitzanzeige -->
     <ScrollView
         android:id="@+id/ownership_scroll"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:background="#DDDDDD"
-        android:padding="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toStartOf="@id/lobby_scroll"
+        app:layout_constraintWidth_percent="0.5">
 
         <TextView
             android:id="@+id/ownership_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Besitz wird hier angezeigt"
+            android:text="Besitz"
+            android:textColor="#000000"
+            android:textSize="14sp" />
+    </ScrollView>
+
+    <!-- Lobbyanzeige -->
+    <ScrollView
+        android:id="@+id/lobby_scroll"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="#EEEEFF"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ownership_scroll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.5">
+
+        <TextView
+            android:id="@+id/lobby_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lobby"
             android:textColor="#000000"
             android:textSize="14sp" />
     </ScrollView>
@@ -50,6 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible" />
+
 
     <TextView
         android:id="@+id/response_view"
