--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -6,26 +6,26 @@
     android:id="@+id/lobbyLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="#fff8e1"
     tools:context=".LobbyActivity">
 
-        <!-- Bild oben einfügen -->
+        <!-- Überschrift "Lobby" -->
         <ImageView
             android:id="@+id/lobbyImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="52dp"
             android:src="@drawable/ic_launcher_dkt"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Überschrift "Lobby" -->
         <TextView
             android:id="@+id/titleLobby"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lobby"
+            android:text="LOBBY"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="#000000"
@@ -34,30 +34,29 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp" />
 
-        <!-- ScrollView für die Spieler-Liste -->
         <ScrollView
             android:id="@+id/playerListScroll"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:background="#EEEEEE"
-            android:layout_marginTop="16dp"
+            android:layout_width="378dp"
+            android:layout_height="275dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@id/titleLobby"
+            android:background="@drawable/border_player_list_container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/titleLobby">
 
                 <TextView
                     android:id="@+id/playerListView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="8dp"
                     android:text="Warte auf Spieler..."
-                    android:textSize="18sp"
                     android:textColor="#000000"
-                    android:padding="8dp" />
+                    android:textSize="18sp" />
         </ScrollView>
 
-        <!-- Start Button -->
         <Button
             android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
@@ -65,6 +64,7 @@
             android:text="Start Game"
             android:visibility="gone"
             android:layout_marginTop="16dp"
+            android:background="@drawable/button_yellow_with_border"
             android:backgroundTint="#ffffff"
             android:textColor="#000000"
             app:layout_constraintTop_toBottomOf="@id/playerListScroll"
@@ -77,8 +77,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Join Game"
-            android:backgroundTint="#000000"
-            android:textColor="#FFFFFF"
+            android:background="@drawable/button_yellow_with_border"
+            android:backgroundTint="#FCD200"
+            android:textColor="#000000"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="32dp"
             app:layout_constraintTop_toBottomOf="@id/buttonStart"
