--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyApplication" parent="android:Theme.Material.Light.NoActionBar" />
-
-    <style name="ThemeOverlay.MyApplication.FullscreenContainer" parent="">
-        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
-        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">#FCD200</item>
+        <item name="colorOnPrimary">#000000</item>
+        <item name="android:windowBackground">#FFF8E1</item>
     </style>
+
+    <!--- <style name="ThemeOverlay.MyApplication.FullscreenContainer" parent="ThemeOverlay.MaterialComponents">
+        <item name="android:windowBackground">#FFF8E1</item>
+        <item name="android:textColor">#000000</item>
+    </style> -->
+
 </resources>
