--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -13,14 +13,14 @@
         android:id="@+id/enterUsernameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PLEASE ENTER YOUR USERNAME"
+        android:layout_marginTop="100dp"
+        android:text="PLEASE ENTER YOUR USERNAME!"
+        android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- Eingabefeld für Username -->
