--- a/app/src/main/res/layout/item_lobby.xml
+++ b/app/src/main/res/layout/item_lobby.xml
@@ -3,10 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@drawable/box_background">
+
 
     <TextView
         android:id="@+id/lobbyName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="@android:color/black" />
+    <TextView
+        android:id="@+id/playerCount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
