--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3F2FD">
+    android:background="#FFF8E1">
 
         <!-- Titel "Lobby" -->
         <TextView
@@ -42,8 +42,8 @@
             android:layout_height="wrap_content"
             android:text="Start Game"
             android:visibility="gone"
-            android:backgroundTint="#0D47A1"
-            android:textColor="#FFFFFF"
+            android:background="@drawable/button_yellow_with_border"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
