--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -46,8 +46,8 @@
         android:layout_height="wrap_content"
         android:text="Enter"
         android:textAllCaps="false"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:textColor="@android:color/white"
+        android:background="@drawable/button_yellow_with_border"
+        android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@id/usernameEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
