--- a/app/src/main/res/layout/create_lobby.xml
+++ b/app/src/main/res/layout/create_lobby.xml
@@ -18,7 +18,7 @@
     <EditText
         android:id="@+id/lobbyNameInput"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:hint="Enter lobby name"
         android:layout_marginBottom="24dp"/>
 
@@ -26,6 +26,8 @@
         android:id="@+id/createLobbyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create"/>
+        android:text="Create"
+        android:background="@drawable/button_yellow_with_border"
+        android:textColor="#000000"/>
 
 </LinearLayout>
