--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -39,6 +39,8 @@
         android:layout_marginEnd="56dp"
         android:layout_marginBottom="41dp"
         android:text="Roll Dice"
+        android:background="@drawable/button_yellow_with_border"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -50,6 +52,8 @@
         android:layout_marginBottom="89dp"
         android:text="Kaufen"
         android:visibility="gone"
+        android:background="@drawable/button_yellow_with_border"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
