--- a/app/src/main/res/layout/lobby_list.xml
+++ b/app/src/main/res/layout/lobby_list.xml
@@ -9,7 +9,9 @@
         android:id="@+id/newLobbyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Lobby" />
+        android:text="New Lobby"
+        android:background="@drawable/button_yellow_with_border"
+        android:textColor="#000000"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lobbyRecyclerView"
