--- a/app/src/main/res/layout/create_lobby.xml
+++ b/app/src/main/res/layout/create_lobby.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="#FFF8E1">
 
     <TextView
         android:id="@+id/lobbyTitle"
