--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,8 @@
     <style name="Theme.MyApplication" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="ThemeOverlay.MyApplication.FullscreenContainer" parent="">
-        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenBackgroundColor">@color/vanilla_background</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
+        <item name="android:windowBackground">@color/vanilla_background</item>
     </style>
 </resources>
