--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -68,4 +68,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
+    <TextView
+        android:id="@+id/order_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Spielreihenfolge wird geladen..."
+        android:padding="16dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
