--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -14,7 +14,7 @@
     <ScrollView
         android:id="@+id/ownership_scroll"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
         android:background="#DDDDDD"
         app:layout_constraintTop_toTopOf="parent"
